tests/NormalTests/paczka1/fuzzy1/29783765.err
Error in line 10: cqB5Xgxno A653 -3,3
Error in line 13: w2T18 S752 46,3
Error in line 15: w2T18 A651 50,6
Error in line 17: nBtKH S752 78,8
Error in line 16: S752 A653 75,7
Error in line 22: cqB5Xgxno A653 253,3
